Add README, CLAUDE.md, and GitHub remote reference
- README: updated with current stack, quick start, Docker, quality gates,
  architecture overview, and React migration plan
- CLAUDE.md: project context for AI-assisted development — build commands,
  JDK 25 constraints, key decisions, suppression rationale, seed data notes

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>